Edit activity_main.xml(button2) Commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="text">어제 작성했던 편지가 지금 도착했습니다.!
 밑의 버튼을 눌러서 지금 바로 확인해보세요
 편지를 읽고 간단한 답변도 달아볼 수 있어요</string>
-
+    <string name="text2">오늘 하루에 기억에 남는 장면이나 재밋었던 일, 털어놓기 힘든 일들을 편지로 써봅시다 !
+        오늘 쓴 편지는 저장되어 다시 볼수 있습니다 미래의 나를 위해 지금 밑의 버튼을 클릭해 추억을 기록하고 보관해봅시다</string>
 </resources>
